
[package]
name = "projekrust"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.7.0", features = ["runtime-tokio", "postgres"] }
chrono = "0.4"  # Make sure to use the correct version number




